// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Statistics > should match snapshot with many recent scores 1`] = `
<div>
  <div
    class="statistics-overlay"
  >
    <div
      class="statistics-modal"
    >
      <div
        class="statistics-header"
      >
        <h2>
          📊 Your Statistics
        </h2>
        <button
          class="statistics-close"
        >
          ×
        </button>
      </div>
      <div
        class="statistics-content"
      >
        <div
          class="statistics-section"
        >
          <h3>
            Overall Stats
          </h3>
          <div
            class="stats-grid"
          >
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Puzzles Completed
              </span>
              <span
                class="stat-value"
              >
                20
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Current Streak
              </span>
              <span
                class="stat-value"
              >
                🔥 
                10
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Best Streak
              </span>
              <span
                class="stat-value"
              >
                ⭐ 
                15
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Total Attempts
              </span>
              <span
                class="stat-value"
              >
                50
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Average Efficiency
              </span>
              <span
                class="stat-value"
              >
                88.50
                %
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Best Efficiency
              </span>
              <span
                class="stat-value"
              >
                99.50
                %
              </span>
            </div>
          </div>
          <div
            class="difficulty-stats"
          >
            <h4>
              By Difficulty
            </h4>
            <div
              class="difficulty-stats-grid"
            >
              <div
                class="difficulty-stat"
              >
                <span>
                  Easy:
                </span>
                <span>
                  5
                </span>
              </div>
              <div
                class="difficulty-stat"
              >
                <span>
                  Medium:
                </span>
                <span>
                  10
                </span>
              </div>
              <div
                class="difficulty-stat"
              >
                <span>
                  Hard:
                </span>
                <span>
                  5
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="statistics-section"
        >
          <h3>
            Current Puzzle Best Score
          </h3>
          <div
            class="best-score-card"
          >
            <div
              class="best-score-item"
            >
              <span>
                Distance:
              </span>
              <span>
                100.00
              </span>
            </div>
            <div
              class="best-score-item"
            >
              <span>
                Efficiency:
              </span>
              <span
                class="best-efficiency"
              >
                100%
              </span>
            </div>
            <div
              class="best-score-item"
            >
              <span>
                Attempts:
              </span>
              <span>
                1
              </span>
            </div>
            <div
              class="best-score-item"
            >
              <span>
                Date:
              </span>
              <span>
                12/29/2025
              </span>
            </div>
          </div>
        </div>
        <div
          class="statistics-section"
        >
          <h3>
            Recent Scores
          </h3>
          <div
            class="recent-scores-list"
          >
            <div
              class="recent-score-item"
            >
              <div
                class="recent-score-header"
              >
                <span
                  class="recent-score-date"
                >
                  2025-12-15
                </span>
                <span
                  class="recent-score-difficulty"
                >
                  easy
                </span>
              </div>
              <div
                class="recent-score-details"
              >
                <span>
                  Efficiency: 
                  90%
                </span>
                <span>
                  Distance: 
                  100.00
                </span>
              </div>
            </div>
            <div
              class="recent-score-item"
            >
              <div
                class="recent-score-header"
              >
                <span
                  class="recent-score-date"
                >
                  2025-12-14
                </span>
                <span
                  class="recent-score-difficulty"
                >
                  medium
                </span>
              </div>
              <div
                class="recent-score-details"
              >
                <span>
                  Efficiency: 
                  91%
                </span>
                <span>
                  Distance: 
                  101.00
                </span>
              </div>
            </div>
            <div
              class="recent-score-item"
            >
              <div
                class="recent-score-header"
              >
                <span
                  class="recent-score-date"
                >
                  2025-12-13
                </span>
                <span
                  class="recent-score-difficulty"
                >
                  hard
                </span>
              </div>
              <div
                class="recent-score-details"
              >
                <span>
                  Efficiency: 
                  92%
                </span>
                <span>
                  Distance: 
                  102.00
                </span>
              </div>
            </div>
            <div
              class="recent-score-item"
            >
              <div
                class="recent-score-header"
              >
                <span
                  class="recent-score-date"
                >
                  2025-12-12
                </span>
                <span
                  class="recent-score-difficulty"
                >
                  easy
                </span>
              </div>
              <div
                class="recent-score-details"
              >
                <span>
                  Efficiency: 
                  93%
                </span>
                <span>
                  Distance: 
                  103.00
                </span>
              </div>
            </div>
            <div
              class="recent-score-item"
            >
              <div
                class="recent-score-header"
              >
                <span
                  class="recent-score-date"
                >
                  2025-12-11
                </span>
                <span
                  class="recent-score-difficulty"
                >
                  medium
                </span>
              </div>
              <div
                class="recent-score-details"
              >
                <span>
                  Efficiency: 
                  94%
                </span>
                <span>
                  Distance: 
                  104.00
                </span>
              </div>
            </div>
            <button
              class="show-more-btn"
            >
              Show All (12)
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Statistics > should match snapshot with no statistics 1`] = `
<div>
  <div
    class="statistics-overlay"
  >
    <div
      class="statistics-modal"
    >
      <div
        class="statistics-header"
      >
        <h2>
          📊 Your Statistics
        </h2>
        <button
          class="statistics-close"
        >
          ×
        </button>
      </div>
      <div
        class="statistics-content"
      >
        <div
          class="statistics-section"
        >
          <h3>
            Overall Stats
          </h3>
          <div
            class="stats-grid"
          >
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Puzzles Completed
              </span>
              <span
                class="stat-value"
              >
                0
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Current Streak
              </span>
              <span
                class="stat-value"
              >
                🔥 
                0
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Best Streak
              </span>
              <span
                class="stat-value"
              >
                ⭐ 
                0
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Total Attempts
              </span>
              <span
                class="stat-value"
              >
                0
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Average Efficiency
              </span>
              <span
                class="stat-value"
              >
                0.00
                %
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Best Efficiency
              </span>
              <span
                class="stat-value"
              >
                0.00
                %
              </span>
            </div>
          </div>
          <div
            class="difficulty-stats"
          >
            <h4>
              By Difficulty
            </h4>
            <div
              class="difficulty-stats-grid"
            >
              <div
                class="difficulty-stat"
              >
                <span>
                  Easy:
                </span>
                <span>
                  0
                </span>
              </div>
              <div
                class="difficulty-stat"
              >
                <span>
                  Medium:
                </span>
                <span>
                  0
                </span>
              </div>
              <div
                class="difficulty-stat"
              >
                <span>
                  Hard:
                </span>
                <span>
                  0
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="statistics-section"
        >
          <p
            class="no-stats"
          >
            No statistics yet. Complete your first puzzle to see your stats!
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Statistics > should match snapshot with statistics data 1`] = `
<div>
  <div
    class="statistics-overlay"
  >
    <div
      class="statistics-modal"
    >
      <div
        class="statistics-header"
      >
        <h2>
          📊 Your Statistics
        </h2>
        <button
          class="statistics-close"
        >
          ×
        </button>
      </div>
      <div
        class="statistics-content"
      >
        <div
          class="statistics-section"
        >
          <h3>
            Overall Stats
          </h3>
          <div
            class="stats-grid"
          >
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Puzzles Completed
              </span>
              <span
                class="stat-value"
              >
                10
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Current Streak
              </span>
              <span
                class="stat-value"
              >
                🔥 
                5
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Best Streak
              </span>
              <span
                class="stat-value"
              >
                ⭐ 
                7
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Total Attempts
              </span>
              <span
                class="stat-value"
              >
                25
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Average Efficiency
              </span>
              <span
                class="stat-value"
              >
                85.50
                %
              </span>
            </div>
            <div
              class="stat-item"
            >
              <span
                class="stat-label"
              >
                Best Efficiency
              </span>
              <span
                class="stat-value"
              >
                98.20
                %
              </span>
            </div>
          </div>
          <div
            class="difficulty-stats"
          >
            <h4>
              By Difficulty
            </h4>
            <div
              class="difficulty-stats-grid"
            >
              <div
                class="difficulty-stat"
              >
                <span>
                  Easy:
                </span>
                <span>
                  3
                </span>
              </div>
              <div
                class="difficulty-stat"
              >
                <span>
                  Medium:
                </span>
                <span>
                  5
                </span>
              </div>
              <div
                class="difficulty-stat"
              >
                <span>
                  Hard:
                </span>
                <span>
                  2
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="statistics-section"
        >
          <h3>
            Current Puzzle Best Score
          </h3>
          <div
            class="best-score-card"
          >
            <div
              class="best-score-item"
            >
              <span>
                Distance:
              </span>
              <span>
                102.00
              </span>
            </div>
            <div
              class="best-score-item"
            >
              <span>
                Efficiency:
              </span>
              <span
                class="best-efficiency"
              >
                98.5%
              </span>
            </div>
            <div
              class="best-score-item"
            >
              <span>
                Attempts:
              </span>
              <span>
                1
              </span>
            </div>
            <div
              class="best-score-item"
            >
              <span>
                Date:
              </span>
              <span>
                12/29/2025
              </span>
            </div>
          </div>
        </div>
        <div
          class="statistics-section"
        >
          <h3>
            Recent Scores
          </h3>
          <div
            class="recent-scores-list"
          >
            <div
              class="recent-score-item"
            >
              <div
                class="recent-score-header"
              >
                <span
                  class="recent-score-date"
                >
                  2025-12-15
                </span>
                <span
                  class="recent-score-difficulty"
                >
                  medium
                </span>
              </div>
              <div
                class="recent-score-details"
              >
                <span>
                  Efficiency: 
                  95.5%
                </span>
                <span>
                  Distance: 
                  105.20
                </span>
              </div>
            </div>
            <div
              class="recent-score-item"
            >
              <div
                class="recent-score-header"
              >
                <span
                  class="recent-score-date"
                >
                  2025-12-14
                </span>
                <span
                  class="recent-score-difficulty"
                >
                  easy
                </span>
              </div>
              <div
                class="recent-score-details"
              >
                <span>
                  Efficiency: 
                  98.0%
                </span>
                <span>
                  Distance: 
                  102.80
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
